--- a/roman-nameral/src/index.css
+++ b/roman-nameral/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color:  #282c34;
   
   /* #212121; */
